# Movespan

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  movespan-guard.yml
app/: Cargo.toml  rust-toolchain.toml
app/.cargo/: config.toml
app/movespan-cli/: Cargo.toml
app/movespan-cli/src/: main.rs
app/movespan-core/: Cargo.toml
app/movespan-core/src/: lib.rs  recorder.rs  replay.rs  sandbox.rs  state_key.rs  workload.rs
app/movespan-core/tests/: capture.rs
crates/movespan-model/: Cargo.toml
crates/movespan-model/src/: lib.rs
crates/movespan-model/tests/: model.rs
crates/movespan-report/: Cargo.toml
crates/movespan-report/src/: lib.rs
crates/movespan-report/tests/: report.rs
crates/movespan-rules/: Cargo.toml
crates/movespan-rules/src/: lib.rs
crates/movespan-rules/tests/: rules.rs
crates/movespan-types/: Cargo.toml
crates/movespan-types/src/: access.rs  lib.rs  location.rs
docs/: index.html
fixtures/amm/: Move.toml
fixtures/amm/sources/: amm.move
fixtures/counter/: Move.toml
fixtures/counter/sources/: counter.move
workloads/: amm.toml  counter.toml
