[workspace]
resolver = "2"
members = ["movespan-core", "movespan-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
movespan-types = { path = "../crates/movespan-types" }
movespan-model = { path = "../crates/movespan-model" }
movespan-rules = { path = "../crates/movespan-rules" }
movespan-report = { path = "../crates/movespan-report" }

# Aptos crates are git-only and large. Pinned to a real mainnet release tag;
# never track `main`, which moves and breaks the build.
aptos-language-e2e-tests = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.48.2" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.48.2" }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.48.2" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.48.2" }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-node-v1.48.2" }

anyhow = "1"
bcs = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt", "macros"] }
url = "2"

[profile.release]
lto = "thin"

# Mirrors aptos-core's [patch.crates-io] at aptos-node-v1.48.2. aptos-core's
# crates depend on these forks (e.g. a merlin that relaxes a 'static bound the
# DKG code needs); building against aptos-core out-of-tree requires the same
# patches, otherwise the stock crates.io versions fail to compile.
[patch.crates-io]
dudect-bencher = { git = "https://github.com/aptos-labs/dudect-bencher", rev = "9515677c83c58884c1a8c764251753269d46fc0e" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "9d2374af843a4562a194529b3cadb8518d7fcd65" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
futures = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
ark-ec = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
ark-ff = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
ark-ff-macros = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
ark-ff-asm = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
ark-poly = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
ark-serialize = { git = "https://github.com/aptos-labs/algebra", branch = "fix-fft-parallelism-cutoff" }
