[package]
name = "movespan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "movespan"
path = "src/main.rs"

[dependencies]
movespan-core = { path = "../movespan-core" }
movespan-model = { workspace = true }
movespan-rules = { workspace = true }
movespan-report = { workspace = true }
movespan-types = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
move-core-types = { workspace = true }
