[package]
name = "movespan-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
movespan-types = { workspace = true }

aptos-language-e2e-tests = { workspace = true }
aptos-types = { workspace = true }
aptos-rest-client = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }

anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
