[package]
name = "movespan-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
movespan-model = { workspace = true }
movespan-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
movespan-types = { workspace = true }
